--- a/src/app/pages/land-details/add-land/add-land.component.html
+++ b/src/app/pages/land-details/add-land/add-land.component.html
@@ -1,4 +1,10 @@
 <h2>Add New Land Record</h2>
+<div style="margin-bottom: 1em;">
+  <mat-card style="background:#e3f2fd; border:1.5px solid #2196f3; color:#1565c0; display:flex; align-items:center; padding: 0.7em 1em;">
+    <mat-icon style="margin-right:0.5em; color:#2196f3;">info</mat-icon>
+    <span>Username and password verification will be required before adding this record. Changes will be automatically recorded and displayed in the land details view.</span>
+  </mat-card>
+</div>
 <div *ngIf="warningMessage" style="margin-bottom: 1em;">
   <mat-card style="background:#ffebee; border:1.5px solid #e53935; color:#b71c1c; display:flex; align-items:center; padding: 0.7em 1em;">
     <mat-icon style="margin-right:0.5em; color:#e53935;">warning</mat-icon>
