--- a/src/app/pages/view-land/view-land.component.css
+++ b/src/app/pages/view-land/view-land.component.css
@@ -1,8 +1,8 @@
 .container {
   padding: 1.5rem;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
 }
 
 
@@ -19,24 +19,23 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  /* padding: 1rem; */
   background-color: #fff;
   border: 1px solid #e5e7eb;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(60, 60, 60, 0.08);
   overflow: hidden;
-  max-height: 470px;
+  max-height: 70vh;
+  min-height: 400px;
 }
 
 .table-container {
   flex: 1;
-  overflow: auto;
-  max-height: 550px;
+  overflow-y: auto;
+  overflow-x: auto;
 }
 
 .land-table {
   width: 100%;
-  min-width: 600px;
   border-collapse: separate;
   border-spacing: 0;
   background: #fff;
