--- a/src/app/pages/land-details/land-update/land-update.component.html
+++ b/src/app/pages/land-details/land-update/land-update.component.html
@@ -30,6 +30,10 @@
               Cadastral Lot No. is required
             </mat-error>
           </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>TD No.</mat-label>
+            <input matInput formControlName="td_no">
+          </mat-form-field>
         </div>
       </div>
       <div class="form-section">
