--- a/src/app/pages/land-details/land-update/land-update.component.html
+++ b/src/app/pages/land-details/land-update/land-update.component.html
@@ -125,11 +125,12 @@
           <div *ngFor="let ctrl of subdivisionAssessorNos.controls; let i = index" class="assessor-no-row">
             <mat-form-field appearance="fill">
               <mat-label>Assessor No</mat-label>
-              <mat-select [formControl]="ctrl">
-                <mat-option *ngFor="let lot of allLots" [value]="lot.id" [disabled]="lot.id == data.id">
+              <input matInput [formControl]="ctrl" [matAutocomplete]="subdivisionAuto" (input)="onAssessorNoInput($event)">
+              <mat-autocomplete #subdivisionAuto="matAutocomplete">
+                <mat-option *ngFor="let lot of filteredLots" [value]="lot.id" [disabled]="lot.id == data.id">
                   {{ lot.index_no }}-{{ lot.assessor_no }} 
                 </mat-option>
-              </mat-select> 
+              </mat-autocomplete>
             </mat-form-field>
             <button mat-icon-button color="warn" (click)="removeSubdivisionAssessorNo(i)" *ngIf="subdivisionAssessorNos.length > 1">
               <mat-icon>remove_circle</mat-icon>
@@ -142,11 +143,12 @@
         <div *ngIf="postForm.get('cancel_reason')?.value === 'transfer'">
           <mat-form-field appearance="fill">
             <mat-label>Transfer Assessor No</mat-label>
-            <mat-select formControlName="transfer_assessor_no">
-              <mat-option *ngFor="let lot of allLots" [value]="lot.id" [disabled]="lot.id == data.id">
+            <input matInput formControlName="transfer_assessor_no" [matAutocomplete]="transferAuto" (input)="onAssessorNoInput($event)">
+            <mat-autocomplete #transferAuto="matAutocomplete">
+              <mat-option *ngFor="let lot of filteredLots" [value]="lot.id" [disabled]="lot.id == data.id">
                 {{ lot.index_no }}-{{ lot.assessor_no }} 
               </mat-option>
-            </mat-select>
+            </mat-autocomplete>
           </mat-form-field>
         </div>
 
@@ -154,11 +156,12 @@
         <div *ngIf="postForm.get('cancel_reason')?.value === 'duplicate'">
           <mat-form-field appearance="fill">
             <mat-label>Duplicate Assessor No</mat-label>
-            <mat-select formControlName="duplicate_assessor_no">
-              <mat-option *ngFor="let lot of allLots" [value]="lot.id" [disabled]="lot.id == data.id">
+            <input matInput formControlName="duplicate_assessor_no" [matAutocomplete]="duplicateAuto" (input)="onAssessorNoInput($event)">
+            <mat-autocomplete #duplicateAuto="matAutocomplete">
+              <mat-option *ngFor="let lot of filteredLots" [value]="lot.id" [disabled]="lot.id == data.id">
                 {{ lot.index_no }}-{{ lot.assessor_no }} 
               </mat-option>
-            </mat-select>
+            </mat-autocomplete>
           </mat-form-field>
         </div>
 
@@ -168,11 +171,12 @@
           <div *ngFor="let ctrl of consolidateAssessorNos.controls; let i = index" class="assessor-no-row">
             <mat-form-field appearance="fill">
               <mat-label>Assessor No</mat-label>
-              <mat-select [formControl]="ctrl">
-                <mat-option *ngFor="let lot of allLots" [value]="lot.id" [disabled]="lot.id == data.id">
+              <input matInput [formControl]="ctrl" [matAutocomplete]="consolidateAuto" (input)="onAssessorNoInput($event)">
+              <mat-autocomplete #consolidateAuto="matAutocomplete">
+                <mat-option *ngFor="let lot of filteredLots" [value]="lot.id" [disabled]="lot.id == data.id">
                   {{ lot.index_no }}-{{ lot.assessor_no }} 
                 </mat-option>
-              </mat-select>
+              </mat-autocomplete>
             </mat-form-field>
             <button mat-icon-button color="warn" (click)="removeConsolidateAssessorNo(i)" *ngIf="consolidateAssessorNos.length > 1">
               <mat-icon>remove_circle</mat-icon>
@@ -186,9 +190,10 @@
         <div class="form-grid">
           <mat-form-field appearance="fill" [color]="postForm.get('index_no')?.invalid && postForm.get('index_no')?.touched ? 'warn' : 'primary'">
             <mat-label>Index No.<span class="mat-form-field-required-marker">*</span></mat-label>
-            <mat-select formControlName="index_no" required>
-              <mat-option *ngFor="let idx of indexOptions" [value]="idx">{{ idx }}</mat-option>
-            </mat-select>
+            <input matInput formControlName="index_no" required [matAutocomplete]="auto">
+            <mat-autocomplete #auto="matAutocomplete">
+              <mat-option *ngFor="let idx of filteredIndexes" [value]="idx">{{ idx }}</mat-option>
+            </mat-autocomplete>
             <mat-error *ngIf="postForm.get('index_no')?.hasError('required') && postForm.get('index_no')?.touched">
               Index No. is required
             </mat-error>
